--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@nivo/core": "^0.88.0",
     "@nivo/line": "^0.88.0",
     "next": "^14.2.22",
+    "papaparse": "^5.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20.17.12",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.1",
     "eslint": "^8.57.1",
