--- a/package.json
+++ b/package.json
@@ -9,21 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@nivo/core": "^0.88.0",
-    "@nivo/line": "^0.88.0",
-    "next": "^14.2.22",
-    "papaparse": "^5.4.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "next": "^15.2.1",
+    "papaparse": "^5.5.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@types/node": "^20.17.12",
+    "@eslint/eslintrc": "^3.3.0",
+    "@types/node": "^22.13.9",
     "@types/papaparse": "^5.3.15",
-    "@types/react": "^18.3.1",
-    "@types/react-dom": "^18.3.1",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.22",
-    "typescript": "^5"
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "eslint": "^9.21.0",
+    "eslint-config-next": "^15.2.1",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2"
   }
 }
