--- a/.prettierrc
+++ b/.prettierrc
@@ -4,8 +4,5 @@
 	"useTabs": true,
 	"semi": true,
 	"singleQuote": true,
-	"trailingComma": "es5",
-	"bracketSpacing": true,
-	"arrowParens": "always",
-	"endOfLine": "lf"
+	"trailingComma": "es5"
 }
