--- a/package.json
+++ b/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "meteo",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "next": "^15.2.1",
-    "papaparse": "^5.5.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/eslintrc": "^3.3.0",
-    "@types/node": "^22.13.9",
-    "@types/papaparse": "^5.3.15",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "eslint": "^9.21.0",
-    "eslint-config-next": "^15.2.1",
-    "prettier": "^3.5.3",
-    "typescript": "^5.8.2"
-  }
+	"name": "meteo",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "eslint .",
+		"format": "prettier --write ."
+	},
+	"dependencies": {
+		"next": "^15.2.4",
+		"papaparse": "^5.5.2",
+		"react": "^19.0.0",
+		"react-dom": "^19.0.0"
+	},
+	"devDependencies": {
+		"@eslint/eslintrc": "^3.3.1",
+		"@types/node": "^22.13.9",
+		"@types/papaparse": "^5.3.15",
+		"@types/react": "^19.0.10",
+		"@types/react-dom": "^19.0.4",
+		"eslint": "^9.23.0",
+		"eslint-config-next": "^15.2.4",
+		"eslint-config-prettier": "^10.1.1",
+		"prettier": "^3.5.3",
+		"typescript": "^5.8.2"
+	}
 }
