--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
-	"printWidth": 100,
-	"tabWidth": 4,
+	"printWidth": 120,
+	"bracketSpacing": false,
 	"useTabs": true,
 	"semi": true,
 	"singleQuote": true,
