Run prettier before commit

--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "eslint .",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"prepare": "husky"
+	},
+	"lint-staged": {
+		"**/*": "prettier --write --ignore-unknown"
 	},
 	"dependencies": {
 		"next": "^15.2.4",
@@ -24,6 +28,8 @@
 		"eslint": "^9.23.0",
 		"eslint-config-next": "^15.2.4",
 		"eslint-config-prettier": "^10.1.1",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.5.0",
 		"prettier": "^3.5.3",
 		"typescript": "^5.8.2"
 	}
