test lint-staged 2

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"prepare": "husky"
 	},
 	"lint-staged": {
-		"**/*": "eslint --fix && prettier --write --ignore-unknown"
+		"**/*": ["eslint --fix", "prettier --write --ignore-unknown"]
 	},
 	"dependencies": {
 		"next": "^15.2.4",
