--- a/package.json
+++ b/package.json
@@ -18,23 +18,29 @@
 		]
 	},
 	"dependencies": {
-		"next": "^15.2.4",
-		"papaparse": "^5.5.2",
-		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"next": "^16.1.6",
+		"papaparse": "^5.5.3",
+		"react": "^19.2.4",
+		"react-dom": "^19.2.4"
 	},
 	"devDependencies": {
-		"@eslint/eslintrc": "^3.3.1",
-		"@types/node": "^22.13.9",
-		"@types/papaparse": "^5.3.15",
-		"@types/react": "^19.0.10",
-		"@types/react-dom": "^19.0.4",
-		"eslint": "^9.23.0",
-		"eslint-config-next": "^15.2.4",
-		"eslint-config-prettier": "^10.1.1",
+		"@eslint/eslintrc": "^3.3.3",
+		"@eslint/compat": "^1.3.1",
+		"@eslint/js": "^9.39.2",
+		"@next/eslint-plugin-next": "^16.1.6",
+		"@typescript-eslint/parser": "^8.54.0",
+		"@typescript-eslint/eslint-plugin": "^8.54.0",
+		"@types/node": "^25.1.0",
+		"@types/papaparse": "^5.5.2",
+		"@types/react": "^19.2.10",
+		"@types/react-dom": "^19.2.3",
+		"node-fetch": "^3.3.2",
+		"eslint": "^9.39.2",
+		"eslint-config-next": "^16.1.6",
+		"eslint-config-prettier": "^10.1.8",
 		"husky": "^9.1.7",
-		"lint-staged": "^15.5.0",
-		"prettier": "^3.5.3",
-		"typescript": "^5.8.2"
+		"lint-staged": "^16.2.7",
+		"prettier": "^3.8.1",
+		"typescript": "^5.9.3"
 	}
 }
