--- a/package.json
+++ b/package.json
@@ -24,22 +24,19 @@
 		"react-dom": "^19.2.4"
 	},
 	"devDependencies": {
-		"@eslint/eslintrc": "^3.3.3",
-		"@eslint/compat": "^1.3.1",
 		"@eslint/js": "^9.39.2",
 		"@next/eslint-plugin-next": "^16.1.6",
-		"@typescript-eslint/parser": "^8.54.0",
-		"@typescript-eslint/eslint-plugin": "^8.54.0",
 		"@types/node": "^25.1.0",
 		"@types/papaparse": "^5.5.2",
 		"@types/react": "^19.2.10",
-		"@types/react-dom": "^19.2.3",
-		"node-fetch": "^3.3.2",
+		"@typescript-eslint/eslint-plugin": "^8.54.0",
+		"@typescript-eslint/parser": "^8.54.0",
 		"eslint": "^9.39.2",
-		"eslint-config-next": "^16.1.6",
 		"eslint-config-prettier": "^10.1.8",
+		"globals": "^17.2.0",
 		"husky": "^9.1.7",
 		"lint-staged": "^16.2.7",
+		"node-fetch": "^3.3.2",
 		"prettier": "^3.8.1",
 		"typescript": "^5.9.3"
 	}
