Add endpoint URL construction and update environment variables

--- a/docs/.env
+++ b/docs/.env
@@ -1,1 +1,4 @@
-API_NOW=https://docs.google.com/spreadsheets/...
+NEXT_PUBLIC_URL=http://localhost:3000
+API_URL=https://docs.google.com/spreadsheets/...
+API_NOW_ID=123
+API_LAST_WEEK_ID=456
