--- a/package.json
+++ b/package.json
@@ -18,8 +18,13 @@
 		]
 	},
 	"dependencies": {
+		"@mantine/core": "^8.3.13",
+		"@mantine/hooks": "^8.3.13",
 		"next": "^16.1.6",
 		"papaparse": "^5.5.3",
+		"postcss": "^8.5.6",
+		"postcss-preset-mantine": "^1.18.0",
+		"postcss-simple-vars": "^7.0.1",
 		"react": "^19.2.4",
 		"react-dom": "^19.2.4"
 	},
