--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		]
 	},
 	"dependencies": {
+		"@mantine/charts": "^8.3.13",
 		"@mantine/core": "^8.3.13",
 		"@mantine/hooks": "^8.3.13",
 		"next": "^16.1.6",
