--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@mantine/charts": "^8.3.13",
 		"@mantine/core": "^8.3.13",
 		"@mantine/hooks": "^8.3.13",
+		"@tabler/icons-react": "^3.36.1",
 		"next": "^16.1.6",
 		"papaparse": "^5.5.3",
 		"postcss": "^8.5.6",
